include(../mc_rtcMacros.cmake)

add_observer_simple(EncoderObserver)
add_observer_simple(BodySensorObserver)
add_observer_simple(KinematicInertialPoseObserver)
add_observer_simple(KinematicInertialObserver)
target_link_libraries(KinematicInertialObserver PUBLIC KinematicInertialPoseObserver)
set_target_properties(KinematicInertialObserver PROPERTIES INSTALL_RPATH ${MC_OBSERVERS_INSTALL_PREFIX})
