macro(add_observer observer_base)
  set(observer_SRC ${observer_base}.cpp)
  set(observer_HDR ../../include/mc_observers/api.h ../../include/mc_observers/${observer_base}.h)
  add_library(${observer_base} SHARED ${observer_SRC} ${observer_HDR})
  set_target_properties(${observer_base} PROPERTIES COMPILE_FLAGS "-DMC_OBSERVERS_EXPORTS" PREFIX "")
  target_link_libraries(${observer_base} PUBLIC mc_rbdyn mc_rtc_gui mc_control)
  target_include_directories(${observer_base} PUBLIC "../../include/mc_observers")
  install(TARGETS ${observer_base} DESTINATION ${MC_OBSERVERS_INSTALL_PREFIX})
endmacro()

add_observer(EncoderObserver)
add_observer(BodySensorObserver)
add_observer(KinematicInertialPoseObserver)
add_observer(KinematicInertialObserver)
target_link_libraries(KinematicInertialObserver PUBLIC KinematicInertialPoseObserver)
set_target_properties(KinematicInertialObserver PROPERTIES INSTALL_RPATH ${MC_OBSERVERS_INSTALL_PREFIX})
